--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.7.1",
     "@types/graphql": "^14.0.3",
     "@types/jest": "^23.3.10",
     "@types/node": "^10.12.18",
@@ -10,6 +11,7 @@
     "@types/react-dom": "^16.0.11",
     "apollo-boost": "^0.1.23",
     "formik": "^1.4.1",
+    "formik-material-ui": "^0.0.16",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
     "react": "^16.7.0",
