--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.7.1",
+    "@material-ui/icons": "^3.0.1",
     "@types/graphql": "^14.0.3",
     "@types/jest": "^23.3.10",
     "@types/node": "^10.12.18",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
     "apollo-boost": "^0.1.23",
+    "firebase": "^5.7.2",
     "formik": "^1.4.1",
     "formik-material-ui": "^0.0.16",
     "graphql": "^14.0.2",
@@ -17,6 +19,7 @@
     "react": "^16.7.0",
     "react-apollo": "^2.3.3",
     "react-dom": "^16.7.0",
+    "react-firebase-file-uploader": "^2.4.2",
     "react-scripts": "2.1.2",
     "typescript": "^3.2.2"
   },
