adding timestamp and imageId to Article; basic cards and graphql for ArticleList

--- a/firebase.json
+++ b/firebase.json
@@ -17,7 +17,7 @@
     ],
     "rewrites": [
       {
-        "source": "!/images/**",
+        "source": "!/@(images|user-images)/**",
         "destination": "/index.html"
       }
     ]
