--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "dependencies": {
     "@material-ui/core": "^3.7.1",
     "@material-ui/icons": "^3.0.1",
+    "@material-ui/styles": "^3.0.0-alpha.5",
+    "@types/classnames": "^2.2.6",
     "@types/graphql": "^14.0.3",
     "@types/jest": "^23.3.10",
     "@types/node": "^10.12.18",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
+    "@types/react-router": "^4.4.3",
+    "@types/react-router-dom": "^4.3.1",
     "apollo-boost": "^0.1.23",
     "firebase": "^5.7.2",
     "formik": "^1.4.1",
@@ -20,6 +24,8 @@
     "react-apollo": "^2.3.3",
     "react-dom": "^16.7.0",
     "react-firebase-file-uploader": "^2.4.2",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.2",
     "typescript": "^3.2.2"
   },
