--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^10.12.18",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
+    "@types/react-infinite-scroller": "^1.2.0",
     "@types/react-router": "^4.4.3",
     "@types/react-router-dom": "^4.3.1",
     "apollo-boost": "^0.1.23",
@@ -24,6 +25,7 @@
     "react-apollo": "^2.3.3",
     "react-dom": "^16.7.0",
     "react-firebase-file-uploader": "^2.4.2",
+    "react-infinite-scroller": "^1.2.4",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.2",
