--- a/package.json
+++ b/package.json
@@ -6,15 +6,6 @@
     "@material-ui/core": "^3.7.1",
     "@material-ui/icons": "^3.0.1",
     "@material-ui/styles": "^3.0.0-alpha.5",
-    "@types/classnames": "^2.2.6",
-    "@types/graphql": "^14.0.3",
-    "@types/jest": "^23.3.10",
-    "@types/node": "^10.12.18",
-    "@types/react": "^16.7.18",
-    "@types/react-dom": "^16.0.11",
-    "@types/react-infinite-scroller": "^1.2.0",
-    "@types/react-router": "^4.4.3",
-    "@types/react-router-dom": "^4.3.1",
     "apollo-boost": "^0.1.23",
     "firebase": "^5.7.2",
     "formik": "^1.4.1",
@@ -28,7 +19,18 @@
     "react-infinite-scroller": "^1.2.4",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.2",
+    "react-scripts": "2.1.2"
+  },
+  "devDependencies": {
+    "@types/classnames": "^2.2.6",
+    "@types/graphql": "^14.0.3",
+    "@types/jest": "^23.3.10",
+    "@types/node": "^10.12.18",
+    "@types/react": "^16.7.18",
+    "@types/react-dom": "^16.0.11",
+    "@types/react-infinite-scroller": "^1.2.0",
+    "@types/react-router": "^4.4.3",
+    "@types/react-router-dom": "^4.3.1",  
     "typescript": "^3.2.2"
   },
   "scripts": {
