--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@material-ui/core": "^3.7.1",
     "@material-ui/icons": "^3.0.1",
     "@material-ui/styles": "^3.0.0-alpha.5",
+    "@types/react-redux": "^7.0.0",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0",
     "apollo-boost": "^0.1.23",
     "firebase": "^5.7.2",
     "formik": "^1.4.1",
@@ -17,9 +20,12 @@
     "react-dom": "^16.7.0",
     "react-firebase-file-uploader": "^2.4.2",
     "react-infinite-scroller": "^1.2.4",
+    "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.2"
+    "react-scripts": "2.1.2",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.6",
@@ -30,7 +36,7 @@
     "@types/react-dom": "^16.0.11",
     "@types/react-infinite-scroller": "^1.2.0",
     "@types/react-router": "^4.4.3",
-    "@types/react-router-dom": "^4.3.1",  
+    "@types/react-router-dom": "^4.3.1",
     "typescript": "^3.2.2"
   },
   "scripts": {
