--- a/functions/package.json
+++ b/functions/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "apollo-server": "^2.3.1",
     "apollo-server-express": "^2.3.1",
+    "core-js": "^2.6.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "firebase-admin": "^6.4.0",
