--- a/functions/package.json
+++ b/functions/package.json
@@ -11,14 +11,14 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "apollo-server": "^2.3.1",
-    "apollo-server-express": "^2.3.1",
-    "core-js": "^2.6.3",
+    "apollo-server": "^2.3.3",
+    "apollo-server-express": "^2.3.3",
+    "core-js": "3.0.0-beta.11",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "firebase-admin": "^6.4.0",
     "firebase-functions": "^2.1.0",
-    "graphql": "^14.0.2",
+    "graphql": "^14.1.1",
     "graphql-tag": "^2.10.0"
   },
   "devDependencies": {
